feat / вывод участников эксперимента

--- a/VEDA-1/VEDA-1.vcxproj
+++ b/VEDA-1/VEDA-1.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="connections.cpp" />
     <ClCompile Include="expChart.cpp" />
     <ClCompile Include="experiment.cpp" />
+    <ClCompile Include="modalUserInfo.cpp" />
     <ClCompile Include="UserData.cpp" />
     <ClCompile Include="HTTPclient.cpp" />
     <ClCompile Include="Profile.cpp" />
@@ -100,6 +101,7 @@
     <QtMoc Include="UserData.h" />
     <QtMoc Include="expChart.h" />
     <ClInclude Include="experiment.h" />
+    <QtMoc Include="modalUserInfo.h" />
     <ClInclude Include="Profile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
