--- a/VEDA-1/VEDA-1.vcxproj.filters
+++ b/VEDA-1/VEDA-1.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="expChart.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="modalUserInfo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Profile.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="expChart.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="modalUserInfo.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
