--- a/VEDA-1/VEDA-1.vcxproj
+++ b/VEDA-1/VEDA-1.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="expChart.cpp" />
     <ClCompile Include="experiment.cpp" />
     <ClCompile Include="modalUserInfo.cpp" />
+    <ClCompile Include="MSGconstructor.cpp" />
     <ClCompile Include="UserData.cpp" />
     <ClCompile Include="HTTPclient.cpp" />
     <ClCompile Include="Profile.cpp" />
@@ -102,6 +103,7 @@
     <QtMoc Include="expChart.h" />
     <ClInclude Include="experiment.h" />
     <QtMoc Include="modalUserInfo.h" />
+    <ClInclude Include="MSGconstructor.h" />
     <ClInclude Include="Profile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
