feat / Удаление участника экс-та БЕЗ БЭКА

--- a/VEDA-1/VEDA-1.vcxproj
+++ b/VEDA-1/VEDA-1.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="connections.cpp" />
     <ClCompile Include="expChart.cpp" />
     <ClCompile Include="experiment.cpp" />
+    <ClCompile Include="GLOBAL.cpp" />
     <ClCompile Include="modalUserInfo.cpp" />
     <ClCompile Include="MSGconstructor.cpp" />
     <ClCompile Include="UserData.cpp" />
@@ -103,6 +104,7 @@
     <QtMoc Include="expChart.h" />
     <ClInclude Include="experiment.h" />
     <QtMoc Include="modalUserInfo.h" />
+    <ClInclude Include="GLOBAL.h" />
     <ClInclude Include="MSGconstructor.h" />
     <ClInclude Include="Profile.h" />
   </ItemGroup>
