--- a/VEDA-1/VEDA-1.vcxproj
+++ b/VEDA-1/VEDA-1.vcxproj
@@ -86,6 +86,7 @@
     <QtRcc Include="VEDA1.qrc" />
     <QtUic Include="VEDA1.ui" />
     <QtMoc Include="VEDA1.h" />
+    <ClCompile Include="admin.cpp" />
     <ClCompile Include="connections.cpp" />
     <ClCompile Include="expChart.cpp" />
     <ClCompile Include="experiment.cpp" />
@@ -102,6 +103,7 @@
     <QtMoc Include="HTTPclient.h" />
     <QtMoc Include="UserData.h" />
     <QtMoc Include="expChart.h" />
+    <ClInclude Include="admin.h" />
     <ClInclude Include="experiment.h" />
     <QtMoc Include="modalUserInfo.h" />
     <ClInclude Include="GLOBAL.h" />
