--- a/VEDA-1/VEDA-1.vcxproj.filters
+++ b/VEDA-1/VEDA-1.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClCompile Include="mainPage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="userArticlesPage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Profile.h">
@@ -109,6 +112,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="mainPage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="userArticlesPage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
